examples/test/testpolicy18063.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18063
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key17: value5
      key12: value17
      key15: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value24
      podSelector:
        matchLabels:
          key22: value16
          key36: value10
